Listagem dos repositorios mais visitados

--- a/src/home/styles/Home.css
+++ b/src/home/styles/Home.css
@@ -3,6 +3,12 @@
     text-align: center;
 }
 
+.home .search-page .error {
+    margin: 10px 0;
+    text-align: center;
+    color: red;
+}
+
 .home .search-user {
     display: flex;
     margin-right: -15px;
